# baram-hola-mini

./: README.md
firmware/hola-mini/: CMakeLists.txt
firmware/hola-mini/prj/vscode/: baram-hola-mini.code-workspace
firmware/hola-mini/src/: CMakeLists.txt
firmware/hola-mini/src/ap/: ap.c
firmware/hola-mini/src/ap/modules/qmk/: CMakeLists.txt  qmk.c
firmware/hola-mini/src/ap/modules/qmk/keyboards/baram/hola-mini/: config.cmake  config.h  keymap.c
firmware/hola-mini/src/ap/modules/qmk/keyboards/baram/hola-mini/json/: BARAM-HOLA-MINI-VIA.JSON  baram-hola-mini.json
firmware/hola-mini/src/ap/modules/qmk/keyboards/baram/hola-mini/port/: via_port.c
firmware/hola-mini/src/ap/modules/qmk/keyboards/baram/hola-mini/port/driver/: rgblight_drivers.c
firmware/hola-mini/src/ap/modules/qmk/port/: matrix.c  sys_port.c
firmware/hola-mini/src/ap/modules/qmk/port/protocol/: host.c
firmware/hola-mini/src/bsp/: bsp.c  bsp.h
firmware/hola-mini/src/common/hw/include/: i2c.h  keys.h  ws2812.h
firmware/hola-mini/src/hw/: hw.c  hw.h  hw_def.h
firmware/hola-mini/src/hw/driver/: cli.c  i2c.c  keys.c  led.c  uart.c  ws2812.c
firmware/hola-mini/src/hw/driver/usb/: tusb_config.h  usb.c
firmware/hola-mini/src/hw/driver/usb/usb_hid/: usbd_hid.c  usbd_hid.h
firmware/hola-mini/tools/osx/: picotool
